ADD: Frame Cursos del profesor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,17 @@
         android:theme="@style/Theme.ProyectoFinal"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".HomeProfesorAddNotify"
+            android:name=".HomeProfesorCursoDetalle"
             android:exported="false"
             android:parentActivityName=".ui.HomeProfesor"/>
+        <activity
+            android:name=".HomeProfesorCursoEstudiantes"
+            android:exported="false"
+            android:parentActivityName=".ui.HomeProfesor"/>
+        <activity
+            android:name=".ui.HomeProfesorAddNotify"
+            android:exported="false"
+            android:parentActivityName=".ui.HomeProfesor" />
         <activity
             android:name=".ui.HomeProfesor"
             android:exported="false" />
