--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:exported="false"
             android:parentActivityName=".ui.HomeProfesor" />
         <activity
+            android:label="SGC - Página de Inicio"
             android:name=".ui.HomeProfesor"
             android:exported="false" />
         <activity
