FIX splash en blanco

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,33 +18,41 @@
         android:theme="@style/Theme.ProyectoFinal"
         android:usesCleartextTraffic="true">
         <activity
+            android:label="SGC - Detalle Estudiante"
             android:name=".DetalleEstudiante"
             android:exported="false" />
         <activity
+            android:label="SGC - Detalle Curso"
             android:name=".HomeProfesorCursoDetalle"
             android:exported="false"
             android:parentActivityName=".ui.HomeProfesor" />
         <activity
+            android:label="SGC - Listado de Estudiantes"
             android:name=".HomeProfesorCursoEstudiantes"
             android:exported="false"
             android:parentActivityName=".ui.HomeProfesor" />
         <activity
+            android:label="SGC - Añadir Novedad"
             android:name=".ui.HomeProfesorAddNotify"
             android:exported="false"
             android:parentActivityName=".ui.HomeProfesor" />
         <activity
+            android:label="SGC - Página de Inicio"
             android:name=".ui.HomeProfesor"
-            android:exported="false"
-            android:label="SGC - Página de Inicio" />
+            android:exported="false" />
         <activity
+            android:label="SGC - Página de Inicio"
             android:name=".ui.HomeEstudiante"
             android:exported="false" />
         <activity
+            android:label="SGC - Ingreso"
             android:name=".ui.Login"
             android:exported="false" />
         <activity
+            android:label="SGC - Splash"
             android:name=".ui.MainActivity"
             android:exported="true"
+            android:noHistory="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
