--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
+    //implementation 'com.mapbox.maps:android:10.5.0'
     implementation 'com.mapbox.maps:android:10.5.0'
 
     testImplementation 'junit:junit:4.13.2'
